--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>HI</h1>
-    <p>😍I'm Bharath this is my first website😍😎hiii</p>
+    <p>😍I'm Bharath  welcome to all this is my first website😍😎hiii</p>
 </body>
 </html>
